# our-crediverse

./: .gitignore
company-repo/crediverse/MobileApplicationService/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.TLS.md  README.md  appversions.conf.sample  auth_patch.patch  build.rs  cleanup.sh  createTestTransactions.sql  docker-compose.yml  dockerfile.prod  getTransactions.sql  mobile_application_service.sh  private_key.pem
company-repo/crediverse/MobileApplicationService/credivault_api_proto/: credivault_api.proto
company-repo/crediverse/MobileApplicationService/docs/authexample/: authenticate.sh  authenticateNotes.md
company-repo/crediverse/MobileApplicationService/docs/global_sales_summary_design/: 01_execustats_bootstrap.md
company-repo/crediverse/MobileApplicationService/helper_scripts/: changeTransactionDates.sql  createMsisdn.sh  createTestingMsisdns.sh  setupAirSimForTesting.sh  startAirSim.sh
company-repo/crediverse/MobileApplicationService/proto/: masapi.proto
company-repo/crediverse/MobileApplicationService/src/: dev-bench.rs  local_utils.rs  main.rs  mas.rs  message_formatters.rs  message_translators.rs  wallet_owner.rs
company-repo/crediverse/MobileApplicationService/src/crediverse/: crediverse_rest.rs  history.rs  hxc.rs  hxc_db_direct.rs  mod.rs  statistics.rs  types.rs
company-repo/crediverse/MobileApplicationService/src/mobile_money/: mod.rs  movivy_mobile_money.rs
company-repo/crediverse/MobileApplicationService/team_service_api_proto/: team_service_api.proto
company-repo/crediverse/MobileApplicationService/testing_jig/: .gitignore  docker-compose.yml
company-repo/crediverse/MobileApplicationService/testing_jig/database/: Dockerfile
company-repo/crediverse/MobileApplicationService/tests/: integration_test_client.rs
company-repo/crediverse/MobileApplicationService/tls/: ca.private.key  extfile.cnf  server.certificate  server.certificate.demo  server.certificate.selfsigned  server.csr  server.private.key  server.private.key.demo  server.private.key.movivy  server.private.key.selfsigned
company-repo/crediverse/TeamService/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  dockerfile.prod
company-repo/crediverse/TeamService/database_scripts/: create_team_service_db.sql
company-repo/crediverse/TeamService/src/: local_utils.rs  main.rs  team_service.rs  upload_csv.rs
company-repo/crediverse/TeamService/tests/: integration_test_client.rs
(+5018 files in other folders)
