[package]
name = "mobile_application_service"
version = "0.0.1"
edition = "2021" # this is the rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dummy"
path = "src/dummy.rs"
build = "build.rs" 

[[bin]]
name = "mas-service"
path = "src/main.rs"
build = "build.rs" 


[[bin]]
name = "dev-bench"
path = "src/dev-bench.rs"

[dependencies]
base64ct = { version = "=1.6.0", default-features = false }
base64 = "0.21.0"
chrono = "0.4.24"
env_logger = "0.10.0"
futures-core = "0.3"
jsonwebtoken = "8.2.0"
jwt = "0.16.0"
lazy_static = "1.4.0"
libmath = "0.2.1"
log = "0.4.17"
mysql_async = "0.32.2"
once_cell = "1.17.2"
openssl = {version= "0.10.54", features = ["vendored"] }
prost = "0.11"
rand = "0.8.5"
reqwest = {version = "0.11.13", features = ["json", "native-tls"]}
rsa = "0.7.2"
serde =  "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
csv = "1.2.2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls"] }
[build-dependencies]
tonic-build = "0.8.3"
chrono = "0.4"
rustls = "0.20.4"
[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
# Include the build script for generating build_info.rs
[build]
target = "build.rs"

# Include the build_info module in the project
[lib]
path = "src/build_info.rs"
