[package]
name = "team-service"
version = "0.0.1"
edition = "2021" # this is the rust edition

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "dummy"
path = "src/dummy.rs"

[[bin]]
name = "team-service"
path = "src/main.rs"

[[bin]]
name = "upload_csv"
path = "src/upload_csv.rs"



[dependencies]
env = "0.0.0"
env_logger = "0.10.0"
mysql_async = "0.32.2"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.8.3", features = ["tls"] }
log = "0.4.17"
prost = "0.11.9"
lazy_static = "1.4.0"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
rand = "0.8.5"

[build-dependencies]
tonic-build = "0.8.3"
rustls = "0.20.4"



